app/styles/main.css
body {
  padding: 20px;
}

#selector-top, #selector-bottom {
    background: blue;
    height:3px;
    position: fixed;
    transition:all 300ms ease;
}

#selector-left, #selector-right {
    background: blue;
    width:3px;
    position: fixed;
    transition:all 300ms ease;
}

#octa-overlay {
    background: transparent;
    height: 100%;
    left: 0;
    position: absolute;
    top: 0;
    width: 100%;
}

